# simple-cpp

./: .gitignore  README.md
CMakeTestProject/: .gitignore  CMakeLists.txt
CPP/: CPP.txt  runner.txt
CPP/clang/: llvm.sln  llvm.vcxproj
CPP/clang-template/: runner.txt
CPP/clang-template/src/exceptions/: file_exception.cpp
CPP/clang/include/: file_exception.h
CPP/cmake-template/: CMakeLists.txt  CMakeSettings.json
CPP/cmake-template/src/: main.cpp
CPP/cmake-template/src/lines/: lines.cpp
CPP/exceptions/: file_exception.cpp
CPP/gcc/: .gitignore  gcc.sln  gcc.vcxproj
CPP/gcc-template/: runner.txt
CPP/gcc/include/: lines.h
CPP/gcc/src/lines/: lines.cpp
CPP/gcc/types/: module.cppm
CPP/include/: file_exception.h
CPP/msvc-template/: .gitignore  CPP.sln  CPP.vcxproj.filters  runner.txt
CPP/msvc/x64/Debug/: main.ilk
CPP/src/: main.cpp
CPP/types/: header_prototype.hpp
qt01/simple-app/: .gitignore  build.txt
qt01/simple-app/simple-app/: CMakeLists.txt  main.cpp
sandbox/CMakeTestProject/: CMakePresets.json
sandbox/CPP/clang-template/: .gitignore
sandbox/CPP/clang-template/src/: main.cpp
sandbox/CPP/cmake-template/: .gitignore
sandbox/CPP/cmake-template/include/: file_exception.h  lines.h
sandbox/CPP/cmake-template/src/exceptions/: file_exception.cpp
sandbox/CPP/gcc-template/: .gitignore
sandbox/CPP/msvc-template/: CPP.vcxproj
sandbox/test01/: .gitattributes  build.txt
sandbox/test01/include/: mySimpleClass.h
sandbox/test01/src/: mySimpleClass.cpp
sandbox/С/: С.txt
test01/: .gitignore  build.txt  directives.txt  test01.sln  test01.vcxproj
test01/include/: mySimpleClass.h
test01/src/: main.cpp  mySimpleClass.cpp
test02/: С.txt
С/: .gitignore
